--- a/Estilos/Principal.css
+++ b/Estilos/Principal.css
@@ -4,7 +4,7 @@
 }
 
 .carousel-inner {
-    height: 90vh;  
+    height: 80vh;  
 }
 
 .div-header {
@@ -18,8 +18,10 @@
     transform: translateX(-50%);
     z-index: 1;
     color: white;
-    font-family: URW Chancery L, cursive;
-    font-size: 3.5em;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 400;
+    font-style: normal;      
+    font-size: 5.5em;
     text-shadow: rgb(39, 39, 39) 1px 0 10px;
 }
 
@@ -43,20 +45,47 @@
 
 
 .conteudo{
-    margin-top: 2%;
+    margin-top: 5%;
     margin-bottom: 5%;
+}
+
+hr {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.txt-conteudo{
+    margin-right: 10%;
+}
+
+.txt-conteudo h1{
+    color: rgba(211, 5, 5, 0.842);
+    font-family: "Style Script", cursive;
+    font-weight: 400;
+    font-style: normal;      
+    font-size: 4.5em;
+}
+
+
+#img1 {
+    box-shadow: 0 4px 8px 0 rgba(0, 153, 255, 0.705), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 8px;
+    width: 35%;
+    height: 35%;
 }
 
 
 .cards{
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-top: 5%;
+    margin-bottom: 8%;
 }
 
 .card-img-top{
     width: 200px;
     width: 350px;
 }
+
 
 
 
