--- a/Estilos/Turismo.css
+++ b/Estilos/Turismo.css
@@ -49,12 +49,13 @@
 }
 
 .img-turismo{
-    width: 55vh;
-    height: 35vh;
+    border-radius: 8px;
+    width: 65vh;
+    height: 45vh;
 }
 
 .txt-conteudo{
-    font-size: 1.2em;
+    font-size: 1.1em;
     justify-content: center;
 }
 
@@ -66,11 +67,20 @@
     font-size: 2.8em;
 }
 
+.txt-conteudo h2{
+    color: rgba(0, 153, 255, 0.705);
+    font-family: "Style Script", cursive;
+    font-weight: 400;
+    font-style: normal;      
+    font-size: 1.5em;
+}
+
 hr {
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
 }
+
 
 .item{
     margin-top: 2%;
